Test proper lists

--- a/locale/ru/LC_MESSAGES/usage.po
+++ b/locale/ru/LC_MESSAGES/usage.po
@@ -652,7 +652,10 @@ msgid ""
 "management algorithm: calculate time table of data transfer permitted "
 "periods, independent power-ups with measure cycle, data transferring only"
 " at allowed intervals"
-msgstr "Выпадающее меню, настраивает управление питанием - *none* - управление питанием не используется. - *sleep* - простой алгоритм управления питанием: включение - измерение - передача данных если возможно - выключение - *timetable* - сложный алгоритм управления питанием: Расчет временной таблицы разрешённых периодов передачи, независимые включения с циклом измерений, передача данных только в разрешённых интервалах"
+msgstr "Выпадающее меню, настраивает управление питанием"
+"* *none* - управление питанием не используется"
+"* *sleep* - простой алгоритм управления питанием: включение - измерение - передача данных если возможно - выключение"
+"* *timetable* - сложный алгоритм управления питанием: Расчет временной таблицы разрешённых периодов передачи, независимые включения с циклом измерений, передача данных только в разрешённых интервалах"
 
 #: ../../usage.rst:281
 msgid "Power up interval (minutes)"
